--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -3,4 +3,17 @@
     margin: 15px;
     padding: 15px;
     border-radius: 15px;
+
+    height: 570px;
+
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
+
+.img{
+    width: 100%;
+    height: 30%;
+    object-fit: cover;
 }
